--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
+.heading {
+  display: inline-block;
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding: 5%;
+  text-align: center;
+  font-size: 20;
   color: white;
+  width: 90%;
+  margin: 0;
 }
 
-.App-link {
-  color: #61dafb;
+.id {
+  font-size: large;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.name {
+  font-size: large;
+}
+
+.description {
+  display: inline-block;
+  margin-left: 4px;
+}
+
+.button {
+  border-radius: 8px;
+  margin-left: 18px;
+  color: #282c34;
+  background-color: white;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  margin-top: 8px;
+}
+
+.spanTask {
+  border-radius: 20px;
+  display: inline-block;
+  width: 46%;
+  margin: 1%;
+  padding: 1%;
+  background-color:rgb(241, 240, 234);
 }
